--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-math-helpers": "^2.7.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
+    "ember-simple-auth": "^1.8.0",
     "ember-source": "~3.1.0",
     "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.0.0",
