--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
@@ -42,6 +43,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-math-helpers": "^2.7.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-moment": "^7.8.1",
     "ember-resolver": "^4.0.0",
     "ember-simple-auth": "^1.8.0",
     "ember-source": "~3.1.0",
